@@ -1,3 +1,8 @@
+2004-05-02  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* rain/rain.c: Update from NetBSD CVS.
+	* exec.objs: Update.
+
 2004-04-30  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* wtf/acronyms.comp: Update from NetBSD CVS.
